--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             </div>
         </div>
     </div>
+    <div class="template-out">
+        <div class="template-in">
+            <p class="template-title"></p>
+            <p class="template-content"></p>
+            <button class="template-okbtn" onclick="close()">Okay</button>
+        </div>
+        <!--<div class="clear"></div>-->
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
